@@ -71,6 +71,11 @@ class xPDOAPCCache extends xPDOCache {
         $deleted = false;
         if (!isset($options['multiple_object_delete']) || empty($options['multiple_object_delete'])) {
             $deleted= apc_delete($this->getCacheKey($key));
+        } elseif (class_exists('APCIterator', true)) {
+            $iterator = new APCIterator('user', '/^' . $key . '/', APC_ITER_KEY);
+            if ($iterator) {
+                $deleted = apc_delete($iterator);
+            }
         }
         return $deleted;
     }
@@ -84,7 +89,9 @@ class xPDOAPCCache extends xPDOCache {
         $flushed = false;
         if (class_exists('APCIterator', true) && $this->getOption('flush_by_key', $options, true) && !empty($this->key)) {
             $iterator = new APCIterator('user', '/^' . $this->key . '\//', APC_ITER_KEY);
-            $flushed = apc_delete($iterator);
+            if ($iterator) {
+                $flushed = apc_delete($iterator);
+            }
         } else {
             $flushed = apc_clear_cache('user');
         }
